--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,58 +3,47 @@ version: '3'
 services:
 
   rabbitmq1:
-    image: rabbitmq:3-management
+    image: rabbit:latest
     hostname: rabbitmq1
-    volumes:
-      - ./erlang.cookie:/var/lib/rabbitmq/.erlang.cookie
-      - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+    environment: 
+      MASTER: 'true'
     networks:
       - rabbit-network
+    healthcheck:
+      test: [ "CMD-SHELL", "rabbitmq-diagnostics -q ping" ]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+
+  rabbitmq2:
+    restart: always
+    image: rabbit:latest
+    hostname: rabbitmq2
+    networks:
+      - rabbit-network
+    depends_on:
+      rabbitmq1:
+        condition: service_healthy
     healthcheck:
       test: [ "CMD-SHELL", "rabbitmq-diagnostics -q ping" ]
       interval: 10s
       timeout: 10s
       retries: 5
 
-  rabbitmq2:
-    restart: always
-    image: rabbitmq:3-management
-    hostname: rabbitmq2
-    depends_on:
-      rabbitmq1:
-        condition: service_healthy
-    volumes:
-      - ./erlang.cookie:/var/lib/rabbitmq/.erlang.cookie
-      - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-      - ./cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
-    entrypoint: /usr/local/bin/cluster-entrypoint.sh
-    networks:
-      - rabbit-network
-    healthcheck:
-      test: [ "CMD-SHELL", "rabbitmq-diagnostics -q ping" ]
-      interval: 10s
-      timeout: 10s
-      retries: 50
-
   rabbitmq3:
     restart: always
-    image: rabbitmq:3-management
+    image: rabbit:latest
     hostname: rabbitmq3
+    networks:
+      - rabbit-network
     depends_on:
       rabbitmq1:
         condition: service_healthy
-    volumes:
-      - ./erlang.cookie:/var/lib/rabbitmq/.erlang.cookie
-      - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-      - ./cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
-    entrypoint: /usr/local/bin/cluster-entrypoint.sh
-    networks:
-      - rabbit-network
     healthcheck:
       test: [ "CMD-SHELL", "rabbitmq-diagnostics -q ping" ]
       interval: 10s
       timeout: 10s
-      retries: 50
+      retries: 5
     
   haproxy:
     restart: always
@@ -69,8 +58,8 @@ services:
       rabbitmq3:
         condition: service_healthy
     ports:
-      - 15672:15672
-      - 5672:5672
+      - 15673:15672
+      - 5673:5672
     networks:
       - rabbit-network
 
